<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="initial_quantity_value">0</string>
    <string name="order">Order</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
    <string name="thank_you">Thank you!</string>
    <string name="order_summary_name">Name: <xliff:g example="Amy" id="name">%s</xliff:g></string>
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g example="true" id="addWhippedCream">%b</xliff:g></string>
    <string name="order_summary_chocolate">Add chocolate? <xliff:g example="true" id="addChocolate">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g example="0" id="quantity">%d</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g example="$10" id="price">%s</xliff:g></string>
    <string name="order_summary_email_subject">Just Java Order for <xliff:g example="Amy" id="name">%s</xliff:g></string>
    <string name="send_email">Send E-Mail</string>
    <string name="empty_name_error">Name should not be blank</string>
</resources>
